--- a/auth.html
+++ b/auth.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocarella - Acceso</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/styleBocarella.css">
+  <link rel="stylesheet" href="Css/auth.css">
   <link rel="stylesheet" href="Css/headerandfooter.css">
 </head>
 <body class="bg-dark text-light">
@@ -101,5 +101,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/layout.js"></script>
   <script src="js/auth.js"></script>
+  <script src="Js/footerandheader.js"></script>
 </body>
 </html>
