--- a/perfil.html
+++ b/perfil.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocarella - Perfil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/Css/auth.css">
+  <link rel="stylesheet" href="/Css/styleBocarella.css">
 </head>
 <body class="bg-dark text-light">
-
+  <div id="header"></div>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
     <div class="container-fluid">
@@ -76,9 +76,7 @@
     </div>
   </main>
 
-  <footer class="bg-dark text-secondary text-center py-3">
-    © 2025 Bocarella 🍕 | Delivery gourmet
-  </footer>
+  <div id="footer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/js/perfil.js"></script>
