--- a/perfil.html
+++ b/perfil.html
@@ -6,10 +6,19 @@
   <title>Bocarella - Perfil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/Css/styleBocarella.css">
+  <style>
+
+    #passwordStrength {
+      height: 6px;
+      border-radius: 3px;
+      margin-top: 5px;
+    }
+  </style>
 </head>
 <body class="bg-dark text-light">
   <div id="header"></div>
-  <!-- Navbar -->
+
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold text-warning" href="index.html">🍕 Bocarella</a>
@@ -25,51 +34,55 @@
     </div>
   </nav>
 
-  <!-- Contenido -->
+
   <main class="container my-5">
     <div class="card custom-bg shadow text-light p-4">
       <h2 class="text-center text-warning mb-4">Mi Perfil</h2>
 
       <div id="mensajePerfil" class="alert d-none"></div>
 
-      <form id="perfilForm">
-        <!-- Nombre -->
+      <form id="perfilForm" novalidate>
+
         <div class="mb-3">
           <label for="perfilNombre" class="form-label">Nombre completo</label>
-          <input type="text" id="perfilNombre" class="form-control" value="Benjamín Bocaz" required>
+          <input type="text" id="perfilNombre" class="form-control" value="Benjamín Bocaz" required autocomplete="name">
           <div class="invalid-feedback">Campo requerido.</div>
         </div>
 
-        <!-- Email -->
+
         <div class="mb-3">
           <label for="perfilEmail" class="form-label">Correo electrónico</label>
-          <input type="email" id="perfilEmail" class="form-control" value="benjamin@bocarella.cl" required>
+          <input type="email" id="perfilEmail" class="form-control" value="benjamin@bocarella.cl" required autocomplete="email">
           <div class="invalid-feedback">Correo inválido.</div>
         </div>
 
-        <!-- Dirección -->
+
         <div class="mb-3">
           <label for="perfilDireccion" class="form-label">Dirección</label>
-          <input type="text" id="perfilDireccion" class="form-control" value="Calle 123, Rancagua" required>
+          <input type="text" id="perfilDireccion" class="form-control" value="Calle 123, Rancagua" required autocomplete="street-address">
           <div class="invalid-feedback">Ingresa una dirección válida.</div>
         </div>
 
-        <!-- Cambiar contraseña -->
+
         <div class="mb-3">
           <label for="perfilPass" class="form-label">Nueva contraseña</label>
-          <input type="password" id="perfilPass" class="form-control" placeholder="Opcional">
+          <input type="password" id="perfilPass" class="form-control" placeholder="Opcional (mínimo 6 caracteres)" autocomplete="new-password">
+          <div id="passwordStrength" class="progress d-none">
+            <div class="progress-bar"></div>
+          </div>
           <div class="invalid-feedback">Debe tener 6-18 caracteres, una mayúscula, un número y un caracter especial.</div>
         </div>
 
+
         <div class="mb-3">
           <label for="perfilConfirm" class="form-label">Confirmar nueva contraseña</label>
-          <input type="password" id="perfilConfirm" class="form-control" placeholder="Opcional">
+          <input type="password" id="perfilConfirm" class="form-control" placeholder="Repite la nueva contraseña" autocomplete="new-password">
           <div class="invalid-feedback">Las contraseñas no coinciden.</div>
         </div>
 
-        <!-- Botones -->
         <div class="d-flex justify-content-between">
           <button type="submit" class="btn btn-success">Guardar cambios</button>
+          <button type="reset" class="btn btn-warning">Limpiar</button>
           <a href="index.html" class="btn btn-secondary">Cancelar</a>
         </div>
       </form>
