--- a/perfil.html
+++ b/perfil.html
@@ -93,5 +93,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/js/perfil.js"></script>
+  <script src="/Js/footerandheader.js"></script>
 </body>
 </html>
