--- a/categorias-promociones/promociones.html
+++ b/categorias-promociones/promociones.html
@@ -2,78 +2,37 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promociones de Pizza</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Promociones de Pizza</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="/Css/promociones.css">
 </head>
 
 <body>
 
-    <div id="header"></div>
+  <div id="header"></div>
 
+  <h1 class="text-center my-4"> Promociones de Pizza</h1>
 
-    <h1> Promociones de Pizza</h1>
+  <div class="text-center mb-4 filter-buttons">
+    <button onclick="filterPromos('all')" class="btn btn-danger">Todas</button>
+    <button onclick="filterPromos('2x1')" class="btn btn-warning">2x1</button>
+    <button onclick="filterPromos('familiar')" class="btn btn-success">Familiar</button>
+    <button onclick="filterPromos('individual')" class="btn btn-info">Individual</button>
+  </div>
 
-    <div class="filter-buttons">
-        <button onclick="filterPromos('all')">Todas</button>
-        <button onclick="filterPromos('2x1')">2x1</button>
-        <button onclick="filterPromos('familiar')">Familiar</button>
-        <button onclick="filterPromos('individual')">Individual</button>
-    </div>
+  <!-- Contenedor donde JS insertará las pizzas -->
+  <div class="container">
+    <div class="row" id="promos"></div>
+  </div>
 
+  <div id="footer"></div>
 
-    <div class="card" style="width: 18rem;">
-        <img src="/Img/BOCA.png" class="card-img-top" alt="Pizza Pepperoni">
-
-        <div class="card-body">
-            <h5 class="card-title">Pizza Pepperoni</h5>
-            <p class="card-text">La mejor pizza de toda Italia 🍕</p>
-        </div>
-
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">Tamaño: Familiar</li>
-            <li class="list-group-item">Ingredientes: Pepperoni, queso mozzarella</li>
-            <li class="list-group-item">Precio: $12.990</li>
-        </ul>
-
-        <div class="card-body">
-            <a href="#" class="card-link btn btn-success">Comprar</a>
-            <a href="#" class="card-link">Más detalles</a>
-        </div>
-    </div>
-
-
-
-    <div class="card" style="width: 18rem;">
-        <img src="/Img/BOCA.png" class="card-img-top" alt="Pizza Pepperoni">
-
-        <div class="card-body">
-            <h5 class="card-title">Pizza Pepperoni</h5>
-            <p class="card-text">La mejor pizza de toda Italia 🍕</p>
-        </div>
-
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">Tamaño: Familiar</li>
-            <li class="list-group-item">Ingredientes: Pepperoni, queso mozzarella</li>
-            <li class="list-group-item">Precio: $12.990</li>
-        </ul>
-
-        <div class="card-body">
-            <a href="#" class="card-link btn btn-success">Comprar</a>
-            <a href="#" class="card-link">Más detalles</a>
-        </div>
-    </div>
-
-
-
-
-    <div id="footer"></div>
-    <script src="/Js/footerandheader.js"></script>
-    <script src="/Js/promociones.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Scripts -->
+  <script src="/Js/footerandheader.js"></script>
+  <script src="/Js/promociones.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
