--- a/categorias-promociones/promociones.html
+++ b/categorias-promociones/promociones.html
@@ -2,19 +2,21 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Promociones de Pizza</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Css/promociones.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Promociones de Pizza</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="/Css/promociones.css">
 </head>
 
 <body>
 
-  <div id="header"></div>
+   <div id="header"></div>
 
-  <h1 class="text-center my-4"> Promociones de Pizza</h1>
+  </div>
+
+  <h1 class="text-center my-4">Promociones de Pizza</h1>
 
   <div class="text-center mb-4 filter-buttons">
     <button onclick="filterPromos('all')" class="btn btn-danger">Todas</button>
@@ -22,12 +24,15 @@
     <button onclick="filterPromos('familiar')" class="btn btn-success">Familiar</button>
     <button onclick="filterPromos('individual')" class="btn btn-info">Individual</button>
   </div>
+  <!-- Carrito flotante -->
+<a href="/carrito.html" id="cart-link">
+  <img src="/Img/imagen carrito.png" alt="Carrito de Compras" style="width:50px; height:50px;">
+</a>
 
-  <!-- Contenedor donde JS insertará las pizzas -->
+
   <div class="container">
     <div class="row" id="promos"></div>
   </div>
-
   <div id="footer"></div>
 
   <!-- Scripts -->
@@ -35,4 +40,5 @@
   <script src="/Js/promociones.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
