--- a/perfil.html
+++ b/perfil.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocarella - Perfil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/Css/styleBocarella.css">
+  <link rel="stylesheet" href="Css/styleBocarella.css">
   <style>
-
     #passwordStrength {
       height: 6px;
       border-radius: 3px;
@@ -25,27 +24,23 @@
       <div id="mensajePerfil" class="alert d-none"></div>
 
       <form id="perfilForm" novalidate>
-
         <div class="mb-3">
           <label for="perfilNombre" class="form-label">Nombre completo</label>
-          <input type="text" id="perfilNombre" class="form-control" value="Benjamín Bocaz" required autocomplete="name">
+          <input type="text" id="perfilNombre" class="form-control" required autocomplete="name">
           <div class="invalid-feedback">Campo requerido.</div>
         </div>
 
-
         <div class="mb-3">
           <label for="perfilEmail" class="form-label">Correo electrónico</label>
-          <input type="email" id="perfilEmail" class="form-control" value="benjamin@bocarella.cl" required autocomplete="email">
+          <input type="email" id="perfilEmail" class="form-control" required autocomplete="email">
           <div class="invalid-feedback">Correo inválido.</div>
         </div>
 
-
         <div class="mb-3">
           <label for="perfilDireccion" class="form-label">Dirección</label>
-          <input type="text" id="perfilDireccion" class="form-control" value="Calle 123, Rancagua" required autocomplete="street-address">
+          <input type="text" id="perfilDireccion" class="form-control" required autocomplete="street-address">
           <div class="invalid-feedback">Ingresa una dirección válida.</div>
         </div>
-
 
         <div class="mb-3">
           <label for="perfilPass" class="form-label">Nueva contraseña</label>
@@ -55,7 +50,6 @@
           </div>
           <div class="invalid-feedback">Debe tener 6-18 caracteres, una mayúscula, un número y un caracter especial.</div>
         </div>
-
 
         <div class="mb-3">
           <label for="perfilConfirm" class="form-label">Confirmar nueva contraseña</label>
@@ -75,7 +69,7 @@
   <div id="footer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/js/perfil.js"></script>
-  <script src="/Js/footerandheader.js"></script>
+  <script src="Js/perfil.js"></script>
+  <script src="Js/footerandheader.js"></script>
 </body>
 </html>
