--- a/carrito.html
+++ b/carrito.html
@@ -5,22 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carrito de Compras</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/Css/carrito.cs">
+  <link rel="stylesheet" href="/Css/carrito.css">
   <style>
-    #cart-items li div { display: flex; justify-content: space-between; align-items: center; }
-    #cart-items button { width: 30px; height: 30px; padding: 0; }
+    #cart-items li div { 
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center; 
+    }
+    #cart-items button { 
+      width: 30px; 
+      height: 30px; 
+      padding: 0; 
+    }
+    #cart-items img {
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
 
   <div class="container mt-4">
-    <h3> Carrito de Compras</h3>
+    <h3>Carrito de Compras</h3>
     <ul id="cart-items" class="list-group mb-3"></ul>
-    <h5>Total: $<span id="cart-total">0</span></h5>
-    <button id="clear-cart" class="btn btn-danger mt-2">Vaciar Carrito</button>
+    <h5>Total: <span id="cart-total">0</span></h5>
+    <div class="d-flex gap-2 mt-2">
+      <button id="clear-cart" class="btn btn-danger">Vaciar Carrito</button>
+      <button id="checkout-cart" class="btn btn-success">Finalizar Compra</button>
+    </div>
   </div>
 
   <script src="/Js/carrito.js"></script>
+  <script>
+    // Conectar botón de checkout con la función del JS
+    document.getElementById("checkout-cart").addEventListener("click", () => {
+      checkoutCart(); // función definida en carrito.js
+    });
+  </script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
