--- a/Index.html
+++ b/Index.html
@@ -7,30 +7,67 @@
     <title>GAMEZONE - Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="Css/INDEX.CSS">
 </head>
 
 <body>
     <div id="header"></div>
 
-    <div class="container px-3 px-md-5">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators" id="carousel-indicators"></div>
-            <div class="carousel-inner" id="carousel-inner"></div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-            </button>
-        </div>
-    </div>
+    <div class="divider"></div>
 
-    <div class="hoverpop" id="game-hover-details">
+    <link rel="stylesheet" href="Css/headerandfooter.css">
+<nav class="navbar navbar-expand-lg navbar-light headerID">
+    <div class="container-fluid">
+
+        <div class="d-flex align-items-center">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
+                <li class="nav-item me-3">
+                    <a class="nav-link" href="#">Inicio</a>
+                </li>
+                <li class="nav-item me-3">
+                    <a class="nav-link" href="#">Promociones</a>
+                </li>
+                <li class="nav-item me-3">
+                    <a class="nav-link" href="#">Pizzas</a>
+                </li>
+                <li class="nav-item me-3">
+                    <a class="nav-link" href="#">Acompañamientos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Extras</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="d-flex align-items-center ms-auto">
+            <a class="nav-link me-2" href="#">Ingresa</a>
+            <a href="#">
+                <img src="Img/NOPICTURE.png" alt="Perfil" class="perfil-img">
+            </a>
+        </div>
+
+    </div>
+</nav>
+
+    <div class="divider"></div>
+
+    <div class="main-content">
+        <div class="bannerid">
+            <!-- Carousel -->
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators" id="carousel-indicators"></div>
+                <div class="carousel-inner" id="carousel-inner"></div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Siguiente</span>
+                </button>
+            </div>
     </div>
 
     <div id="footer"></div>
@@ -39,6 +76,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="Js/footerandheader.js"></script>
 </body>
-
-
 </html>
