--- a/footer.html
+++ b/footer.html
@@ -1,34 +1,32 @@
-<link rel="stylesheet" href="CSS/headerandfooter.css">
-</head>
-<body>
-    <footer class="bg-dark text-white pt-4 mt-5">
-        <div class="container text-center text-md-start">
-            <div class="row">
-                <div class="col-md-4 mb-3">
-                    <h5 class="fw-bold textore">GAMEZONE</h5>
-                    <p>
-                        Tu portal de juegos digitales. Descubre, comparte y disfruta lo mejor del gaming.
-                    </p>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <h5 class="fw-bold">Enlaces</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">Categoría</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Comunidad</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Soporte</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Ingresa</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <h5 class="fw-bold">Síguenos</h5>
-                    <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
-                    <a href="#" class="text-white me-3"><i class="fab fa-twitter fa-lg"></i></a>
-                    <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-youtube fa-lg"></i></a>
-                </div>
+<link rel="stylesheet" href="Css/headerandfooter.css">
+<footer class=" text-dark pt-4 mt-5 footer1id">
+    <div class="container text-center text-md-start">
+        <div class="row">
+            <div class="col-md-4 mb-3">
+                <h5 class="fw-bold textore">GAMEZONE</h5>
+                <p>
+                    Tu portal de juegos digitales. Descubre, comparte y disfruta lo mejor del gaming.
+                </p>
+            </div>
+            <div class="col-md-4 mb-3">
+                <h5 class="fw-bold">Enlaces</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-dark text-decoration-none">Categoría</a></li>
+                    <li><a href="#" class="text-dark text-decoration-none">Comunidad</a></li>
+                    <li><a href="#" class="text-dark text-decoration-none">Soporte</a></li>
+                    <li><a href="#" class="text-dark text-decoration-none">Ingresa</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 mb-3">
+                <h5 class="fw-bold">Síguenos</h5>
+                <a href="#" class="text-dark me-3"><i class="fab fa-facebook fa-lg"></i></a>
+                <a href="#" class="text-dark me-3"><i class="fab fa-twitter fa-lg"></i></a>
+                <a href="#" class="text-dark me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                <a href="#" class="text-dark"><i class="fab fa-youtube fa-lg"></i></a>
             </div>
         </div>
-        <div class="text-center py-3 bg-black mt-3">
-            <small>© 2025 GAMEZONE. Todos los derechos reservados.</small>
-        </div>
-    </footer>
+    </div>
+    <div class="text-center py-3" style="background-color: rgb(189, 197, 157);">
+        <small>© 2025 GAMEZONE. Todos los derechos reservados.</small>
+    </div>
+</footer>
