--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="Css/headerandfooter.css">
+<link rel="stylesheet" href="../Css/headerandfooter.css">
 <footer class=" text-dark pt-4 mt-5 footer1id">
     <div class="container text-center text-md-start">
         <div class="row">
