--- a/header.html
+++ b/header.html
@@ -1,11 +1,11 @@
-<link rel="stylesheet" href="Css/headerandfooter.css">
+<link rel="stylesheet" href="../Css/headerandfooter.css">
 <nav class="navbar navbar-expand-lg navbar-light headerID">
     <div class="container-fluid">
 
         <!-- Logo y links a la izquierda -->
         <div class="d-flex align-items-center">
-            <a class="navbar-brand me-3" href="#">
-                <img src="Img/BOCA.png" alt="Logo" width="45" height="45">
+            <a class="navbar-brand me-3" href="../Bocarella/Index.html">
+                <img src="../Img/BOCA.png" alt="Logo" width="45" height="45">
             </a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
                 <li class="nav-item me-3">
@@ -19,9 +19,9 @@
 
         <!-- Ingresa y foto de perfil a la derecha -->
         <div class="d-flex align-items-center ms-auto">
-            <a class="nav-link me-2" href="#">Ingresa</a>
+            <a class="nav-link me-2" href="../Bocarella/acceso.html">Ingresa</a>
             <a href="#">
-                <img src="Img/nopicture.webp" alt="Perfil" width="40" height="40" class="rounded-circle">
+                <img src="../Img/nopicture.webp" alt="Perfil" width="40" height="40" class="rounded-circle">
             </a>
         </div>
     </div>
