--- a/Index.html
+++ b/Index.html
@@ -40,10 +40,7 @@
         </div>
 
         <div class="d-flex align-items-center ms-auto">
-            <a class="nav-link me-2" href="#">Ingresa</a>
-            <a href="#">
-                <img src="Img/NOPICTURE.png" alt="Perfil" class="perfil-img">
-            </a>
+            <a class="nav-link me-2" href="#"></a>
         </div>
 
     </div>
@@ -72,6 +69,11 @@
 
     <div id="footer"></div>
 
+    <script>
+    window.addEventListener("load", () => {
+        document.body.classList.add("loaded");
+    });
+</script>
     <script src="Js/DATABASES/DBBANNERS.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="Js/footerandheader.js"></script>
