--- a/acceso.html
+++ b/acceso.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="Css/styleBocarella.css">
   <link rel="stylesheet" href="Css/headerandfooter.css">
 </head>
-<body class="bg-dark text-light">
+<body>
 
   <div id="header"></div>
 
   <main class="container my-5">
     <div class="card custom-bg shadow text-light p-4">
-      <h2 class="text-center text-warning mb-4">Bienvenido a Bocarella</h2>
+      <h2 class="text-center mb-4">Bienvenido a Bocarella</h2>
 
       <ul class="nav nav-tabs mb-3" id="authTabs" role="tablist">
         <li class="nav-item">
