--- a/perfil.html
+++ b/perfil.html
@@ -14,12 +14,12 @@
     }
   </style>
 </head>
-<body class="bg-dark text-light">
+<body>
   <div id="header"></div>
 
   <main class="container my-5">
     <div class="card custom-bg shadow text-light p-4">
-      <h2 class="text-center text-warning mb-4">Mi Perfil</h2>
+      <h2 class="text-center mb-4">Mi Perfil</h2>
 
       <div id="mensajePerfil" class="alert d-none"></div>
 
