--- a/footer.html
+++ b/footer.html
@@ -3,18 +3,18 @@
     <div class="container text-center text-md-start">
         <div class="row">
             <div class="col-md-4 mb-3">
-                <h5 class="fw-bold textore">GAMEZONE</h5>
+                <h5 class="fw-bold textore">BOCARELLA</h5>
                 <p>
-                    Tu portal de juegos digitales. Descubre, comparte y disfruta lo mejor del gaming.
+                    Bocarella Más que una pizza, una experiencia. Descubre, comparte y disfruta cada rebanada.
                 </p>
             </div>
             <div class="col-md-4 mb-3">
                 <h5 class="fw-bold">Enlaces</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="text-dark text-decoration-none">Categoría</a></li>
+                    <li><a href="/categorias-promociones/promociones.html" class="text-dark text-decoration-none">Promociones</a></li>
                     <li><a href="#" class="text-dark text-decoration-none">Comunidad</a></li>
                     <li><a href="#" class="text-dark text-decoration-none">Soporte</a></li>
-                    <li><a href="#" class="text-dark text-decoration-none">Ingresa</a></li>
+                    <li><a href="/acceso.html" class="text-dark text-decoration-none">Ingresa</a></li>
                 </ul>
             </div>
             <div class="col-md-4 mb-3">
@@ -27,6 +27,6 @@
         </div>
     </div>
     <div class="text-center py-3" style="background-color: rgb(189, 197, 157);">
-        <small>© 2025 GAMEZONE. Todos los derechos reservados.</small>
+        <small>© 2025 BOCARELLA. Todos los derechos reservados.</small>
     </div>
 </footer>
