--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#">Inicio</a>
                 </li>
                 <li class="nav-item me-3">
-                    <a class="nav-link" href="#">Promociones</a>
+                    <a class="nav-link" href="/categorias-promociones/promociones.html">Promociones</a>
                 </li>
                 <li class="nav-item me-3">
                     <a class="nav-link" href="#">Pizzas</a>
