--- a/header.html
+++ b/header.html
@@ -13,11 +13,15 @@
                     <a class="nav-link" href="#">Menú</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pedidos</a>
+                    <a class="nav-link" href="/historial.html">Pedidos</a>
                 </li>
             </ul>
         </div>
-
+<div class="d-flex align-items-center ms-auto">
+    <!-- Carrito -->
+    <a href="/carrito.html" class="nav-link">
+  Carrito <span id="cart-count" class="badge bg-danger">0</span>
+</a>
         <!-- Ingresa y foto de perfil a la derecha -->
         <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
