--- a/categorias-promociones/promociones.html
+++ b/categorias-promociones/promociones.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Promociones de Pizza</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Css/promociones.css">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- FontAwesome (si usas íconos en header/footer) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
-
 <body>
 
   <!-- Header dinámico -->
   <div id="header"></div>
+  <div class="divider"></div>
 
-  <h1 class="text-center my-4">Promociones de Pizza</h1>
+  <main class="container my-4">
+    <h1 class="text-center mb-4">Promociones de Pizza</h1>
 
-  <div class="text-center mb-4 filter-buttons">
-    <button onclick="filterPromos('all')" class="btn btn-danger">Todas</button>
-    <button onclick="filterPromos('2x1')" class="btn btn-warning">2x1</button>
-    <button onclick="filterPromos('familiar')" class="btn btn-success">Familiar</button>
-    <button onclick="filterPromos('individual')" class="btn btn-info">Individual</button>
-  </div>
-
-  <!-- Contenedor de promociones -->
-  <div class="container">
-    <div class="row" id="promos">
-      <!-- Las promociones se generarán dinámicamente desde JS -->
+    <div class="text-center mb-4 filter-buttons">
+      <button onclick="filterPromos('all')" class="btn btn-danger">Todas</button>
+      <button onclick="filterPromos('2x1')" class="btn btn-warning">2x1</button>
+      <button onclick="filterPromos('familiar')" class="btn btn-success">Familiar</button>
+      <button onclick="filterPromos('individual')" class="btn btn-info">Individual</button>
     </div>
-  </div>
 
+    <!-- Contenedor de promociones -->
+    <div class="row" id="promos"></div>
+  </main>
 
-
+  <div class="divider"></div>
   <!-- Footer dinámico -->
   <div id="footer"></div>
 
@@ -42,19 +39,14 @@
   <script src="/Js/promociones.js"></script>
 
   <script>
-    // Refrescar contador y total cuando cargue la página
-    document.addEventListener("DOMContentLoaded", () => {
-      setTimeout(() => {
-        if (typeof updateCartCount === "function") {
-          updateCartCount();
-        }
-        if (typeof updateCartTotal === "function") {
-          updateCartTotal();
-        }
-      }, 300);
+    // Actualizar contador de carrito y total después de cargar header/footer
+    window.addEventListener("load", () => {
+      if (typeof updateCartCount === "function") updateCartCount();
+      if (typeof updateCartTotal === "function") updateCartTotal();
     });
   </script>
 
+  <!-- Bootstrap Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
