--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
         <div class="d-flex align-items-center">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
                 <li class="nav-item me-3">
-                    <a class="nav-link" href="#">Inicio</a>
+                    <a class="nav-link" href="/Index.html">Inicio</a>
                 </li>
                 <li class="nav-item me-3">
                     <a class="nav-link" href="/categorias-promociones/promociones.html">Promociones</a>
