--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
             </a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
                 <li class="nav-item me-3">
-                    <a class="nav-link" href="#">Menú</a>
+                    <a class="nav-link" href="/Index.html">Menú</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/historial.html">Pedidos</a>
