--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="/categorias-promociones/promociones.html">Promociones</a>
                 </li>
                 <li class="nav-item me-3">
-                    <a class="nav-link" href="#">Pizzas</a>
+                    <a class="nav-link" href="/pizzas.html">Pizzas</a>
                 </li>
                 <li class="nav-item me-3">
                     <a class="nav-link" href="#">Acompañamientos</a>
