--- a/historial.html
+++ b/historial.html
@@ -8,74 +8,83 @@
 </head>
 <body>
 
-<!-- Header dinámico -->
-<div id="header"></div>
+  <!-- Header dinámico -->
+  <div id="header"></div>
 
-<div class="container my-5">
-  <h1 class="text-center mb-4">Historial de Compras</h1>
-  <div id="historial" class="mb-4"></div>
-  <div class="text-center">
-    <button id="clear-history" class="btn btn-danger">Vaciar Historial</button>
+  <div class="container my-5">
+    <h1 class="text-center mb-4">Historial de Compras</h1>
+    <div id="historial" class="mb-4"></div>
+    <div class="text-center">
+      <button id="clear-history" class="btn btn-danger">Vaciar Historial</button>
+    </div>
   </div>
-</div>
 
-<!-- Footer dinámico -->
-<div id="footer"></div>
+  <!-- Footer dinámico -->
+  <div id="footer"></div>
 
-<script src="/Js/footerandheader.js"></script>
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const historialContainer = document.getElementById('historial');
-    const activeUser = JSON.parse(localStorage.getItem("activeUser"));
+  <!-- Scripts -->
+  <script src="/Js/footerandheader.js"></script>
 
-    if(!activeUser){
-      historialContainer.innerHTML = '<p class="text-center">Debes iniciar sesión para ver tu historial.</p>';
-      document.getElementById('clear-history').style.display = "none";
-      return;
-    }
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const historialContainer = document.getElementById('historial');
+      const activeUser = JSON.parse(localStorage.getItem("activeUser"));
 
-    const historyKey = `history_${activeUser.usuario}`;
-    const history = JSON.parse(localStorage.getItem(historyKey)) || [];
+      if (!activeUser) {
+        historialContainer.innerHTML = '<p class="text-center">Debes iniciar sesión para ver tu historial.</p>';
+        document.getElementById('clear-history').style.display = "none";
+        return;
+      }
 
-    if (history.length === 0) {
-      historialContainer.innerHTML = '<p class="text-center">No hay compras registradas.</p>';
-    } else {
-      history.forEach((compra, index) => {
-        let productosHTML = '';
-        compra.productos.forEach(item => {
-          productosHTML += `
-            <li>${item.titulo} - Cantidad: ${item.cantidad} - Precio unitario: ${item.precio}</li>
+      const historyKey = `history_${activeUser.usuario}`;
+      const history = JSON.parse(localStorage.getItem(historyKey)) || [];
+
+      if (history.length === 0) {
+        historialContainer.innerHTML = '<p class="text-center">No hay compras registradas.</p>';
+      } else {
+        history.forEach((compra, index) => {
+          let productosHTML = '';
+          compra.productos.forEach(item => {
+            productosHTML += `
+              <li>
+                ${item.titulo} ${item.tamaño ? `(${item.tamaño})` : ""} 
+                - Cantidad: ${item.cantidad} 
+                - Precio unitario: ${item.precio}
+                ${item.ingredientesExtra && item.ingredientesExtra.length > 0 
+                  ? `<br><small>Extras: ${item.ingredientesExtra.join(", ")}</small>` 
+                  : ""}
+              </li>
+            `;
+          });
+
+          const compraCard = `
+            <div class="card mb-4">
+              <div class="card-header">
+                Compra ${index + 1} - Fecha: ${compra.fecha}
+              </div>
+              <div class="card-body">
+                <ul>
+                  ${productosHTML}
+                </ul>
+                <p class="fw-bold">Total: $${compra.total.toLocaleString()}</p>
+              </div>
+            </div>
           `;
+          historialContainer.innerHTML += compraCard;
         });
+      }
 
-        const compraCard = `
-          <div class="card mb-4">
-            <div class="card-header">
-              Compra ${index + 1} - Fecha: ${compra.fecha}
-            </div>
-            <div class="card-body">
-              <ul>
-                ${productosHTML}
-              </ul>
-              <p class="fw-bold">Total: $${compra.total.toLocaleString()}</p>
-            </div>
-          </div>
-        `;
-        historialContainer.innerHTML += compraCard;
+      // Vaciar historial
+      document.getElementById('clear-history').addEventListener('click', () => {
+        localStorage.removeItem(historyKey);
+        localStorage.removeItem(`cart_${activeUser.usuario}`);
+        historialContainer.innerHTML = '<p class="text-center">No hay compras registradas.</p>';
+        alert('Historial borrado!');
+        if (typeof updateHeaderCartCount === "function") updateHeaderCartCount();
       });
-    }
-
-    // Vaciar historial
-    document.getElementById('clear-history').addEventListener('click', () => {
-      localStorage.removeItem(historyKey);
-      localStorage.removeItem(`cart_${activeUser.usuario}`);
-      historialContainer.innerHTML = '<p class="text-center">No hay compras registradas.</p>';
-      alert('Historial borrado!');
-      updateHeaderCartCount(); // actualizar contador en header
     });
-  });
-</script>
+  </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
