--- a/acompañamientos.html
+++ b/acompañamientos.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Promociones de Pizza</title>
-  <!-- Bootstrap -->
+  <title>Acompañamientos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- FontAwesome (si usas íconos en header/footer) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
   <!-- Header dinámico -->
   <div id="header"></div>
-  <div class="divider"></div>
 
   <!-- Subheader -->
   <nav class="bg-light border-bottom mb-4 sticky-top">
@@ -26,38 +22,24 @@
   </nav>
 
   <main class="container my-4">
-    <h1 class="text-center mb-4">Promociones de Pizza</h1>
-
-    <div class="text-center mb-4 filter-buttons">
-      <button onclick="filterPromos('all')" class="btn btn-danger">Todas</button>
-      <button onclick="filterPromos('2x1')" class="btn btn-warning">2x1</button>
-      <button onclick="filterPromos('familiar')" class="btn btn-success">Familiar</button>
-      <button onclick="filterPromos('individual')" class="btn btn-info">Individual</button>
-    </div>
-
-    <!-- Contenedor de promociones -->
-    <div class="row" id="promos"></div>
+    <h1 class="text-center mb-4"> Acompañamientos</h1>
+    <div class="row" id="acompanamientos"></div>
   </main>
 
-  <div class="divider"></div>
-  <!-- Footer dinámico -->
   <div id="footer"></div>
 
   <!-- Scripts -->
   <script src="/Js/footerandheader.js"></script>
   <script src="/Js/carrito.js"></script>
-  <script src="/Js/promociones.js"></script>
+  <script src="/Js/acompañamientos.js"></script>
 
   <script>
-    // Actualizar contador de carrito y total después de cargar header/footer
     window.addEventListener("load", () => {
       if (typeof updateCartCount === "function") updateCartCount();
       if (typeof updateCartTotal === "function") updateCartTotal();
     });
   </script>
 
-  <!-- Bootstrap Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
