--- a/pizzas.html
+++ b/pizzas.html
@@ -3,23 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pizzas de la Tienda</title>
+  <title>Pizzas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
   <!-- Header dinámico -->
   <div id="header"></div>
-  <div class="divider"></div>
+
+  <!-- Subheader -->
+  <nav class="bg-light border-bottom mb-4 sticky-top">
+    <div class="container d-flex justify-content-center py-2">
+      <a href="/categorias-promociones/promociones.html" class="btn btn-outline-danger mx-2">🍕 Promociones</a>
+      <a href="/pizzas.html" class="btn btn-outline-success mx-2">🍕 Pizzas</a>
+      <a href="/acompañamientos.html" class="btn btn-outline-warning mx-2">🥤 Acompañamientos</a>
+      <a href="/extras.html" class="btn btn-outline-info mx-2">🍰 Extras</a>
+    </div>
+  </nav>
 
   <main class="container my-4">
-    <h1 class="text-center mb-4"> Nuestras Pizzas</h1>
-
+    <h1 class="text-center mb-4">🍕 Pizzas</h1>
     <div class="row" id="pizzas"></div>
   </main>
 
-  <div class="divider"></div>
-  <!-- Footer dinámico -->
   <div id="footer"></div>
 
   <!-- Scripts -->
@@ -37,3 +43,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
