--- a/Index.html
+++ b/Index.html
@@ -42,14 +42,39 @@
   <div id="footer"></div>
 
   <!-- Scripts -->
+  <script src="Js/DATABASES/DBBANNERS.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="Js/footerandheader.js"></script>
+
   <script>
+    // Función para ajustar padding dinámico según altura del header
+    function ajustarPadding() {
+      const header = document.getElementById("header");
+      const mainContent = document.querySelector(".main-content");
+      if (header && mainContent) {
+        mainContent.style.paddingTop = header.offsetHeight + "px";
+      }
+    }
+
+    // Observador para detectar cuando se carga contenido en el header
+    const header = document.getElementById("header");
+    if (header) {
+      const observer = new MutationObserver(() => {
+        ajustarPadding();
+      });
+      observer.observe(header, { childList: true, subtree: true });
+    }
+
+    // Ajuste al cargar y al redimensionar
+    window.addEventListener("load", ajustarPadding);
+    window.addEventListener("resize", ajustarPadding);
+
+    // Para animación de carga
     window.addEventListener("load", () => {
       document.body.classList.add("loaded");
     });
   </script>
-  <script src="Js/DATABASES/DBBANNERS.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="Js/footerandheader.js"></script>
 </body>
 
 </html>
+
