--- a/categorias-promociones/promociones.html
+++ b/categorias-promociones/promociones.html
@@ -45,6 +45,28 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  window.addEventListener("load", () => {
+    const header = document.getElementById("header"); 
+    const main = document.querySelector("main");
+
+    if (header && main) {
+      const headerHeight = header.offsetHeight; 
+      main.style.paddingTop = headerHeight + "px"; 
+    }
+  });
+
+
+  window.addEventListener("resize", () => {
+    const header = document.getElementById("header");
+    const main = document.querySelector("main");
+
+    if (header && main) {
+      main.style.paddingTop = header.offsetHeight + "px";
+    }
+  });
+</script>
+
 </body>
 </html>
 
