--- a/pizzas.html
+++ b/pizzas.html
@@ -12,7 +12,7 @@
   <div id="header"></div>
 
   <main class="container my-4">
-    <h1 class="text-center mb-4">🍕 Pizzas</h1>
+    <h1 class="text-center mb-4"> Pizzas</h1>
     <div class="row" id="pizzas"></div>
   </main>
 
@@ -31,6 +31,29 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  function ajustarPadding() {
+    const header = document.getElementById("header");
+    const main = document.querySelector("main");
+    if (header && main) {
+      main.style.paddingTop = header.offsetHeight + "px";
+    }
+  }
+
+ 
+  const header = document.getElementById("header");
+  if (header) {
+    const observer = new MutationObserver(() => {
+      ajustarPadding();
+    });
+    observer.observe(header, { childList: true, subtree: true });
+  }
+
+
+  window.addEventListener("load", ajustarPadding);
+  window.addEventListener("resize", ajustarPadding);
+</script>
+
 </body>
 </html>
 
