ALEXANDER: CAMBIOS GENERALES

--- a/header.html
+++ b/header.html
@@ -49,9 +49,11 @@
     </div>
 
     <!-- Carrito siempre visible -->
-    <div class="d-flex align-items-center ms-auto">
-      <a href="/carrito.html" class="nav-link">
-        Carrito <span id="cart-count" class="badge bg-danger">0</span>
+    <div class="d-flex align-items-center ms-auto carrito-css2">
+      <a href="/carrito.html" class="carrito-css">
+      <i class="fa-solid fa-cart-shopping"></i>
+      <span id="cart-count" class="">0</span>
+      </a>
       </a>
     </div>
   </div>
