--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GAMEZONE - Bootstrap</title>
+  <title>LaBocarella - Bootstrap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="Css/INDEX.CSS">
@@ -12,13 +12,10 @@
 </head>
 
 <body>
-  <!-- Header dinámico -->
   <div id="header"></div>
 
-  <!-- Contenido principal -->
-  <div class="main-content">
+  <div class="main-content contenido">
     <div class="bannerid">
-      <!-- Carousel -->
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators" id="carousel-indicators"></div>
         <div class="carousel-inner" id="carousel-inner"></div>
@@ -34,43 +31,16 @@
     </div>
   </div>
 
-
-  <!-- Footer dinámico -->
   <div id="footer"></div>
 
-  <!-- Scripts -->
   <script src="Js/DATABASES/DBBANNERS.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="Js/footerandheader.js"></script>
-
   <script>
-    // Función para ajustar padding dinámico según altura del header
-    function ajustarPadding() {
-      const header = document.getElementById("header");
-      const mainContent = document.querySelector(".main-content");
-      if (header && mainContent) {
-        mainContent.style.paddingTop = header.offsetHeight + "px";
-      }
-    }
-
-    // Observador para detectar cuando se carga contenido en el header
-    const header = document.getElementById("header");
-    if (header) {
-      const observer = new MutationObserver(() => {
-        ajustarPadding();
-      });
-      observer.observe(header, { childList: true, subtree: true });
-    }
-
-    // Ajuste al cargar y al redimensionar
-    window.addEventListener("load", ajustarPadding);
-    window.addEventListener("resize", ajustarPadding);
-
-    // Para animación de carga
     window.addEventListener("load", () => {
-      document.body.classList.add("loaded");
+        document.body.classList.add("loaded");
     });
-  </script>
+</script>
 </body>
 
 </html>
