--- a/acceso.html
+++ b/acceso.html
@@ -12,7 +12,7 @@
 
   <div id="header"></div>
 
-  <main class="container my-5">
+  <main class="container my-5 contenedor">
     <div class="card custom-bg shadow text-light p-4">
       <h2 class="text-center mb-4">Bienvenido a Bocarella</h2>
 
