--- a/carrito.html
+++ b/carrito.html
@@ -6,6 +6,7 @@
   <title>Carrito de Compras</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/Css/carrito.css">
+  <link rel="stylesheet" href="Css/styleBocarella.css">
   <style>
     #cart-items li div { 
       display: flex; 
@@ -31,7 +32,7 @@
   <!-- Header dinámico -->
   <div id="header"></div>
 
-  <div class="container mt-4 main-content">
+  <div class="container mt-4 main-content contenedor">
     <h3>Carrito de Compras</h3>
     <ul id="cart-items" class="list-group mb-3"></ul>
     <h5>Total: <span id="cart-total">0</span></h5>
@@ -49,29 +50,6 @@
   <script src="/Js/carrito.js"></script>
 
   <script>
-    // Función para ajustar padding dinámico según altura del header
-    function ajustarPadding() {
-      const header = document.getElementById("header");
-      const mainContent = document.querySelector(".main-content");
-      if (header && mainContent) {
-        mainContent.style.paddingTop = header.offsetHeight + "px";
-      }
-    }
-
-    // Observador para detectar cuando se carga contenido en el header
-    const header = document.getElementById("header");
-    if (header) {
-      const observer = new MutationObserver(() => {
-        ajustarPadding();
-      });
-      observer.observe(header, { childList: true, subtree: true });
-    }
-
-    // Ajuste al cargar y al redimensionar
-    window.addEventListener("load", ajustarPadding);
-    window.addEventListener("resize", ajustarPadding);
-
-    // Vincular botones
     document.getElementById("checkout-cart").addEventListener("click", () => {
       checkoutCart();
     });
