--- a/categorias-promociones/promociones.html
+++ b/categorias-promociones/promociones.html
@@ -6,6 +6,7 @@
   <title>Promociones de Pizza</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="../Css/styleBocarella.css">
 </head>
 <body>
 
@@ -13,7 +14,7 @@
   <div id="header"></div>
   <div class="divider"></div>
 
-  <main class="container my-4">
+  <main class="container my-4 contenedor">
     <h1 class="text-center mb-4">Promociones de Pizza</h1>
 
     <div class="text-center mb-4 filter-buttons">
@@ -45,27 +46,6 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-  window.addEventListener("load", () => {
-    const header = document.getElementById("header"); 
-    const main = document.querySelector("main");
-
-    if (header && main) {
-      const headerHeight = header.offsetHeight; 
-      main.style.paddingTop = headerHeight + "px"; 
-    }
-  });
-
-
-  window.addEventListener("resize", () => {
-    const header = document.getElementById("header");
-    const main = document.querySelector("main");
-
-    if (header && main) {
-      main.style.paddingTop = header.offsetHeight + "px";
-    }
-  });
-</script>
 
 </body>
 </html>
