--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="../Css/headerandfooter.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <footer class=" text-dark pt-4 mt-5 footer1id">
     <div class="container text-center text-md-start">
         <div class="row">
