--- a/historial.html
+++ b/historial.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Historial de Compras</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="Css/styleBocarella.css">
 </head>
 <body>
 
   <!-- Header dinámico -->
   <div id="header"></div>
 
-  <div class="container my-5">
+  <div class="container my-5 contenedor">
     <h1 class="text-center mb-4">Historial de Compras</h1>
     <div id="historial" class="mb-4"></div>
     <div class="text-center">
