--- a/Html-Paginas/Html-Subpaginas/header.html
+++ b/Html-Paginas/Html-Subpaginas/header.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light headerID" id="mainHeader">
   <div class="container-fluid">
 
-    <a class="navbar-brand me-3" href="/Index.html">
+    <a class="navbar-brand me-3" href="/Html-Paginas/Index.html">
       <img src="../Img/BOCA.png" alt="Logo" width="70" height="70">
       <img src="../Img/labocarella.png" alt="Logo" width="120">
     </a>
 
     <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-row">
-      <li class="nav-item me-3"><a class="nav-link" href="/Index.html">Menú</a></li>
-      <li class="nav-item"><a class="nav-link" href="/historial.html">Pedidos</a></li>
+      <li class="nav-item me-3"><a class="nav-link" href="/Html-Paginas/Index.html">Menú</a></li>
+      <li class="nav-item"><a class="nav-link" href="/Html-Paginas/historial.html">Pedidos</a></li>
     </ul>
 
     <ul class="navbar-nav ms-auto">
@@ -17,7 +17,7 @@
           Ingresa
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-          <li><a class="dropdown-item" href="/perfil.html">Mi Perfil</a></li>
+          <li><a class="dropdown-item" href="/Html-Paginas/perfil.html">Mi Perfil</a></li>
           <li><hr class="dropdown-divider"></li>
           <li><button class="dropdown-item" id="logoutBtn">Cerrar sesión</button></li>
         </ul>
@@ -34,16 +34,16 @@
 
     <div class="collapse navbar-collapse flex-column" id="subNavContent">
       <ul class="navbar-nav mb-2 mb-lg-0 w-100">
-        <li class="nav-item"><a class="nav-link" href="/Index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="/categorias-promociones/promociones.html">Promociones</a></li>
-        <li class="nav-item"><a class="nav-link" href="/pizzas.html">Pizzas</a></li>
-        <li class="nav-item"><a class="nav-link" href="/acompañamientos.html">Acompañamientos</a></li>
-        <li class="nav-item"><a class="nav-link" href="/extras.html">Extras</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Html-Paginas/Index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Html-Paginas/promociones.html">Promociones</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Html-Paginas/pizzas.html">Pizzas</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Html-Paginas/acompañamientos.html">Acompañamientos</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Html-Paginas/extras.html">Extras</a></li>
       </ul>
     </div>
 
     <div class="d-flex align-items-center ms-auto carrito-css2">
-      <a href="/carrito.html" class="carrito-css">
+      <a href="/Html-Paginas/carrito.html" class="carrito-css">
       <i class="fa-solid fa-cart-shopping"></i>
       <span id="cart-count" class="">0</span>
       </a>
