--- a/Html-Paginas/carrito.html
+++ b/Html-Paginas/carrito.html
@@ -6,7 +6,7 @@
   <title>Carrito de Compras</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/Css/carrito.css">
-  <link rel="stylesheet" href="Css/styleBocarella.css">
+  <link rel="stylesheet" href="/Css/styleBocarella.css">
   <style>
     #cart-items li div { 
       display: flex; 
