--- a/Html-Paginas/Html-Subpaginas/footer.html
+++ b/Html-Paginas/Html-Subpaginas/footer.html
@@ -12,9 +12,8 @@
             <div class="col-md-4 mb-3">
                 <h5 class="fw-bold">Enlaces</h5>
                 <ul class="list-unstyled">
-                    <li><a href="/categorias-promociones/promociones.html" class="text-dark text-decoration-none">Promociones</a></li>
-                    <li><a href="/soporte.html" class="text-dark text-decoration-none">Soporte</a></li>
-                    <li><a href="/acceso.html" class="text-dark text-decoration-none">Ingresa</a></li>
+                    <li><a href="/Html-Paginas/promociones.html" class="text-dark text-decoration-none">Promociones</a></li>
+                    <li><a href="/Html-Paginas/soporte.html" class="text-dark text-decoration-none">Soporte</a></li>
                 </ul>
             </div>
             <div class="col-md-4 mb-3">
