--- a/Html-Paginas/Index.html
+++ b/Html-Paginas/Index.html
@@ -7,8 +7,8 @@
   <title>LaBocarella - Bootstrap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="Css/INDEX.CSS">
-  <link rel="stylesheet" href="Css/headerandfooter.css">
+  <link rel="stylesheet" href="/Css/INDEX.CSS">
+  <link rel="stylesheet" href="/Css/headerandfooter.css">
 </head>
 
 <body>
@@ -33,9 +33,9 @@
 
   <div id="footer"></div>
 
-  <script src="Js/DATABASES/DBBANNERS.js"></script>
+  <script src="/Js/DATABASES/DBBANNERS.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="Js/footerandheader.js"></script>
+  <script src="/Js/footerandheader.js"></script>
   <script>
     window.addEventListener("load", () => {
         document.body.classList.add("loaded");
