--- a/Html-Paginas/acceso.html
+++ b/Html-Paginas/acceso.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocarella - Acceso</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="Css/styleBocarella.css">
-  <link rel="stylesheet" href="Css/headerandfooter.css">
+  <link rel="stylesheet" href="/Css/styleBocarella.css">
+  <link rel="stylesheet" href="/Css/headerandfooter.css">
 </head>
 <body>
 
@@ -108,7 +108,7 @@
   <div id="footer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="Js/auth.js"></script>
-  <script src="Js/footerandheader.js"></script>
+  <script src="/Js/auth.js"></script>
+  <script src="/Js/footerandheader.js"></script>
 </body>
 </html>
