--- a/Html-Paginas/extras.html
+++ b/Html-Paginas/extras.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pizzas</title>
+  <title>Extras</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="Css/styleBocarella.css">
+  <link rel="stylesheet" href="/Css/styleBocarella.css">
 </head>
 <body>
 
   <div id="header"></div>
 
   <main class="container my-4 contenedor">
-    <h1 class="text-center mb-4"> Pizzas</h1>
-    <div class="row" id="pizzas"></div>
+    <h1 class="text-center mb-4"> Extras</h1>
+    <div class="row" id="extras"></div>
   </main>
 
   <div id="footer"></div>
 
   <script src="/Js/footerandheader.js"></script>
   <script src="/Js/carrito.js"></script>
-  <script src="/Js/pizzastipo.js"></script>
+  <script src="/Js/extras.js"></script>
 
   <script>
     window.addEventListener("load", () => {
@@ -30,6 +30,6 @@
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
-
