--- a/Html-Paginas/perfil.html
+++ b/Html-Paginas/perfil.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocarella - Perfil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="Css/styleBocarella.css">
+  <link rel="stylesheet" href="/Css/styleBocarella.css">
   <style>
     #passwordStrength {
       height: 6px;
@@ -60,7 +60,7 @@
         <div class="d-flex justify-content-between">
           <button type="submit" class="btn btn-success">Guardar cambios</button>
           <button type="reset" class="btn btn-warning">Limpiar</button>
-          <a href="index.html" class="btn btn-secondary">Cancelar</a>
+          <a href="/Html-Paginas/Index.html" class="btn btn-secondary">Cancelar</a>
         </div>
       </form>
     </div>
@@ -69,7 +69,7 @@
   <div id="footer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="Js/perfil.js"></script>
-  <script src="Js/footerandheader.js"></script>
+  <script src="/Js/perfil.js"></script>
+  <script src="/Js/footerandheader.js"></script>
 </body>
 </html>
