--- a/Html-Paginas/soporte.html
+++ b/Html-Paginas/soporte.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocarella - Soporte</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="Css/styleBocarella.css">
+  <link rel="stylesheet" href="/Css/styleBocarella.css">
 </head>
 <body>
 
@@ -52,7 +52,7 @@
   <div id="footer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="Js/soporte.js"></script>
-  <script src="Js/footerandheader.js"></script>
+  <script src="/Js/soporte.js"></script>
+  <script src="/Js/footerandheader.js"></script>
 </body>
 </html>
